--- a/Episode - 01 Inception/files/index.html
+++ b/Episode - 01 Inception/files/index.html
@@ -24,6 +24,6 @@
      src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"
      ></script>
 
-    <script src="./app.js"></script>
+    <script src="./App.js"></script>
 </body>
 </html>
